fix responsive extrawhitespace

--- a/_sass/card.scss
+++ b/_sass/card.scss
@@ -13,7 +13,6 @@
 }
 
 .business-card-title {
-    width: 100%;
     margin: 1em;
 
     h1 {
